framework is static reduct changes activeArguments

--- a/SerialisabilitySolverV2.vcxproj
+++ b/SerialisabilitySolverV2.vcxproj
@@ -19,12 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Actives.c" />
     <ClCompile Include="AF.c" />
     <ClCompile Include="AFReduct.c" />
     <ClCompile Include="List.c" />
     <ClCompile Include="Matrix.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Actives.h" />
     <ClInclude Include="AF.h" />
     <ClInclude Include="AFReduct.h" />
     <ClInclude Include="List.h" />
