corrected many bugs changed matrix to have unified length of rows

--- a/SerialisabilitySolverV2.vcxproj.filters
+++ b/SerialisabilitySolverV2.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Actives.c">
       <Filter>Source Files\DataModel</Filter>
     </ClCompile>
+    <ClCompile Include="Main.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="List.h">
