--- a/SerialisabilitySolverV2.vcxproj
+++ b/SerialisabilitySolverV2.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="AF.c" />
     <ClCompile Include="AFReduct.c" />
     <ClCompile Include="List.c" />
+    <ClCompile Include="Main.c" />
     <ClCompile Include="Matrix.c" />
   </ItemGroup>
   <ItemGroup>
