debugging and implementation of linked sparse matrices

--- a/SerialisabilitySolverV2.vcxproj
+++ b/SerialisabilitySolverV2.vcxproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Actives.c" />
     <ClCompile Include="AF.c" />
-    <ClCompile Include="AFReduct.c" />
+    <ClCompile Include="Reduct.c" />
     <ClCompile Include="List.c" />
     <ClCompile Include="Main.c" />
     <ClCompile Include="Matrix.c" />
@@ -29,7 +29,7 @@
   <ItemGroup>
     <ClInclude Include="Actives.h" />
     <ClInclude Include="AF.h" />
-    <ClInclude Include="AFReduct.h" />
+    <ClInclude Include="Reduct.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="Matrix.h" />
   </ItemGroup>
