--- a/SerialisabilitySolverV2.vcxproj
+++ b/SerialisabilitySolverV2.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Actives.c" />
     <ClCompile Include="AF.c" />
+    <ClCompile Include="ExternalSatSolver.c" />
     <ClCompile Include="LinkedSparseMatrix.c" />
     <ClCompile Include="LinkedSparseMatrix.h" />
     <ClCompile Include="Reduct.c" />
