--- a/SerialisabilitySolverV2.vcxproj.filters
+++ b/SerialisabilitySolverV2.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClInclude Include="ExternalSatSolver.h">
       <Filter>Header Files\SATSolver</Filter>
     </ClInclude>
+    <ClInclude Include="Encodings.h">
+      <Filter>Header Files\SATSolver</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
