--- a/SerialisabilitySolverV2.vcxproj.filters
+++ b/SerialisabilitySolverV2.vcxproj.filters
@@ -57,10 +57,13 @@
     <ClCompile Include="LinkedSparseMatrix.h">
       <Filter>Header Files\Utilities</Filter>
     </ClCompile>
-    <ClCompile Include="LinkedSparseMatrix.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ExternalSatSolver.c">
+      <Filter>Source Files\SATSolver</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkedSparseMatrix.c">
+      <Filter>Source Files\Utilities</Filter>
+    </ClCompile>
+    <ClCompile Include="Encodings.c">
       <Filter>Source Files\SATSolver</Filter>
     </ClCompile>
   </ItemGroup>
@@ -85,6 +88,12 @@
     </ClInclude>
     <ClInclude Include="Encodings.h">
       <Filter>Header Files\SATSolver</Filter>
+    </ClInclude>
+    <ClInclude Include="Array.c">
+      <Filter>Source Files\Utilities</Filter>
+    </ClInclude>
+    <ClInclude Include="Array.h">
+      <Filter>Header Files\Utilities</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
