implemented Array.h debugged Actives.c with new column for encoding label

--- a/SerialisabilitySolverV2.vcxproj
+++ b/SerialisabilitySolverV2.vcxproj
@@ -33,7 +33,9 @@
   <ItemGroup>
     <ClInclude Include="Actives.h" />
     <ClInclude Include="AF.h" />
-    <ClInclude Include="Array.c" />
+    <ClCompile Include="Array.c">
+      <FileType>CppCode</FileType>
+    </ClCompile>
     <ClInclude Include="Array.h" />
     <ClInclude Include="Encodings.h" />
     <ClInclude Include="ExternalSatSolver.h" />
